# OpenAlexBiblio

./: .gitignore  .pre-commit-config.yaml  BIBLIOMETRIC_PIPELINE_TUTORIAL.md  CITATION.cff  CITING.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  DOCS_README.md  DOCUMENTATION_AT_A_GLANCE.md  DOCUMENTATION_FINAL_CHECKLIST.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_STRUCTURE_REFERENCE.md  ENHANCED_METRICS_QUICK_REFERENCE.md  FILE_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REFERENCE_CARD.md  README.md  TESTING_STRATEGY.md  VERIFICATION_CHECKLIST.md  codecov.yml  junit.xml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-test.txt  requirements.txt  run_tests.py
.claude/agents/: python-code-reviewer.md
.claude/memory/: MEMORY.md  feedback_git_workflow.md  project_pending_cleanup.md
.github/workflows/: tests.yml
agents/: bibliometric_analysis.md  classification.md  data_cleaning.md  data_collection.md  network_analysis.md  orchestrator.md
agents/validation/: data_validation.md  validation_agents.md
checkpoints/: pipeline_state.json
config/: config.yaml  llm.yaml  openalex.yaml  taxonomy.yaml
data/clean/: cleaning_report.json  openalex_clean.parquet
data/processed/: bibliometric_summary.json  citation_stats.json  classification_report.json  classified_works.parquet  cluster_assignments.parquet  concept_landscape.json  interdisciplinary_bridges.json  network_layout.json  network_metrics.json  prototypes.npz  prototypes_metadata.json  publication_trends.json  subcategory_taxonomy.json  top_authors.json  top_institutions.json  top_journals.json
data/raw/: collection_manifest.json  openalex_raw_20260412_164037.parquet  openalex_raw_20260412_221312.parquet  openalex_raw_20260414_093620.parquet
docs/: INDEX.md  README.md
docs/development/: CODE_QUALITY_ANALYSIS.md  ENHANCED_METRICS.md  (+2 more)
logs/: pipeline_run_20260412_221307.json  pipeline_run_20260412_222953.json  pipeline_run_20260412_231322.json  pipeline_run_20260412_233137.json  validation_classification.json  validation_data_D1.json  validation_data_D2.json  validation_network.json  validation_statistical.json
scripts/: check_setup.py  update_taxonomy.py
src/: __init__.py
tests/: conftest.py  generate_mock_data.py  generate_test_data.py  test_pipeline_consistency.py
(+66 files in other folders)
