[project]
name = "bibliometric-pipeline"
version = "1.1.0"
description = "A Bibliometric Analysis Pipeline Using OpenAlex Data"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Messaoud Zouikri", email = "econoPoPop@proton.me" }
]
requires-python = ">=3.10"
keywords = ["bibliometrics", "populism", "network-analysis", "OpenAlex", "NLP"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyarrow>=12.0.0",
  "requests>=2.31.0",
  "pyyaml>=6.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "networkx>=3.1",
  "python-louvain>=0.16",
  "matplotlib>=3.7.0",
  "sentence-transformers>=2.7.0",
  "torch>=2.2.0",
  "peft>=0.10.0",
  "hdbscan>=0.8.33",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "pytest-xdist>=3.0.0",
  "pytest-subtests>=0.11.0",
  "pytest-anyio>=0.0.0",
  "responses>=0.23.0",
  "freezegun>=1.2.0",
  "psutil>=5.9.0",
]
dev = [
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/MessaoudZouikri/OpenAlexBiblio"
Repository = "https://github.com/MessaoudZouikri/OpenAlexBiblio"
Issues = "https://github.com/MessaoudZouikri/OpenAlexBiblio/issues"
Documentation = "https://github.com/MessaoudZouikri/OpenAlexBiblio/blob/main/docs/INDEX.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E221", "E241"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
